--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
+MONGODB_URL=mongodb+srv://sjhaxkira:sjha40449@shivamxeric.flecm.mongodb.net/New-Chat?retryWrites=true&w=majority&appName=ShivamXeric
+PORT = 5000
+JWT_SECRET=SHIVAMXERIC
+NODE_ENV=development
+
+
+CLOUDINARY_CLOUD_NAME=shivamxeric
+CLOUDINARY_API_KEY= 312286848672338
+CLOUDINARY_API_SECRET= 6I02QLPIFW6QwVzpNUexImsBiB0
+CLOUDINARY_URL=cloudinary://312286848672338:6I02QLPIFW6QwVzpNUexImsBiB0@shivamxeric
 
