--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "chat-application": "file:..",
+    "framer-motion": "^11.17.0",
+    "lucide-react": "^0.471.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.4.0",
     "react-player": "^2.15.1",
     "react-router-dom": "^6.22.3",
     "socket.io-client": "^4.7.5",
