--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,13 @@
 {
-  "name": "chat-application",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "- Facilitate communication and collaboration among users working remotely or in different locations.\r   - Allow for the exchange of messages.",
-  "main": "server.js",
-  "type": "module",
- 
-  "scripts": {
-    "server": "nodemon backend/server.js",
-    "start":"node server.js",
-    "build":"npm install && npm install --prefix frontend && npm run build --prefix frontend"
-  },
-  "keywords": [],
-  "author": "",
+  "description": "",
   "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.0",
-    "socket.io": "^4.7.5"
+  "author": "",
+  "type": "module",
+  "start": "node server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   }
 }
